# mcp-ssh-server

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  LICENSE  MANIFEST.in  QUICK-TEST.md  README.md  env.example  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  test_minimal.py  tsconfig.json
examples/: basic_usage.py  network_devices.py
src/: real-ssh-server.ts  server.ts  simple-server.ts
src/config/: index.ts
src/mcp_ssh_server/: __init__.py  exceptions.py  server.py  ssh_manager.py
src/services/: cache.ts  security.ts  ssh.ts
src/types/: index.ts
src/utils/: logger.ts
tests/: test_ssh_manager.py
